[gd_scene load_steps=11 format=3 uid="uid://bgagifdev40yk"]

[ext_resource type="Theme" uid="uid://4vrmlk1raavy" path="res://resources/theme.tres" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://bval0fmdjaet" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="Texture2D" uid="uid://dubt5x0ntj1od" path="res://art/icons/back.png" id="3_6wm04"]
[ext_resource type="Texture2D" uid="uid://c5son408o0nng" path="res://art/icons/back-small.png" id="4_es4n0"]
[ext_resource type="PackedScene" uid="uid://b085dkuk7uq8r" path="res://scenes/mini_menu.tscn" id="5_gis3k"]
[ext_resource type="AudioStream" uid="uid://cpke8gi8uop4d" path="res://sound/music/Hang on.wav" id="6_gis3k"]
[ext_resource type="PackedScene" uid="uid://bijfo0tkv3b3j" path="res://scenes/egg_gen.tscn" id="7_83j8s"]

[sub_resource type="LabelSettings" id="LabelSettings_36l1p"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_5p8wc"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_r6d6q"]
font_size = 22

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6d6q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
label_settings = SubResource("LabelSettings_36l1p")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_5p8wc")
columns = 2

[node name="Music" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_5p8wc")
horizontal_alignment = 1

[node name="Music Volume" type="HScrollBar" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 1.0
value = 1.0

[node name="Sound Effects" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_r6d6q")
horizontal_alignment = 1

[node name="Sound Volume" type="HScrollBar" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 1.0
value = 1.0

[node name="Space1" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Space2" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Back" type="TextureButton" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_5p8wc")
action_mode = 0
texture_normal = ExtResource("3_6wm04")
texture_pressed = ExtResource("4_es4n0")

[node name="Mini Menu" parent="." instance=ExtResource("5_gis3k")]
layout_mode = 0
offset_left = 802.0
offset_right = 1152.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gis3k")
autoplay = true

[node name="Egg-Gen" parent="." instance=ExtResource("7_83j8s")]

[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/Music Volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/Sound Volume" to="." method="_on_sound_volume_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/Back" to="." method="_on_back_pressed"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
